--- a/src/skins/gaia/dtml/frame_public.html
+++ b/src/skins/gaia/dtml/frame_public.html
@@ -343,11 +343,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="col-md-3 footer-grid testimonial">
 						<h3>Who are we?</h3>
 						<div class="testmonial-grid">
-							<p><strong>Valentina Cecchini</strong> - (227719), Student @ University of Studies of L'Aquila.</p>
+							<p><strong>Valentina Cecchini</strong>, Student @ University of Studies of L'Aquila.</p>
 						</div>
 						<div class="clearfix"> </div>
 						<div class="testmonial-grid">
-							<p><strong>Stefano Valentini</strong> - (227718), Student @ University of Studies of L'Aquila.</p>
+							<p><strong>Stefano Valentini</strong>, Student @ University of Studies of L'Aquila.</p>
 						</div>
 					</div>
 
